--- a/portfolio-page/style.css
+++ b/portfolio-page/style.css
@@ -7,6 +7,7 @@
 html {
     font-size: 10px;
     font-family: 'Montserrat', sans-serif;
+    scroll-behavior: smooth;
 }
 
 a {
@@ -97,7 +98,7 @@ p {
     left: 0;
     z-index: 2000;
     width: 100vw;
-    padding: 20px 30px;
+    padding: 10px 30px;
     transition: .3s ease background-color;
 }
 
